--- a/impl/src/main/resources/javax/faces/Messages_de.properties
+++ b/impl/src/main/resources/javax/faces/Messages_de.properties
@@ -14,96 +14,86 @@
 
 # standard messages (Spec. 2.5.2.4)
 
-javax.faces.component.UIInput.CONVERSION        = Konvertierungsfehler
-javax.faces.component.UIInput.CONVERSION_detail = "{0}": Fehler beim Model-Update.
+# components
+javax.faces.component.UIInput.CONVERSION = {0}: Ein Konvertierungsfehler ist aufgetreten.
+javax.faces.component.UIInput.REQUIRED = {0}: Validierungsfehler: Eingabe erforderlich.
+javax.faces.component.UIInput.UPDATE = {0}: Bei der Verarbeitung der \u00FCbertragenden Eingaben ist ein Fehler aufgetreten. 
 
-javax.faces.component.UIInput.REQUIRED        = Validierungsfehler
-javax.faces.component.UIInput.REQUIRED_detail = "{0}": Eingabe erforderlich.
+javax.faces.component.UISelectOne.INVALID = {0}: Validierungsfehler: Wert ist keine g\u00FCltige Auswahl
+javax.faces.component.UISelectMany.INVALID = {0}: Validierungsfehler: Wert ist keine g\u00FCltige Auswahl
 
-javax.faces.component.UISelectOne.INVALID        = Validierungsfehler
-javax.faces.component.UISelectOne.INVALID_detail = "{0}": Wert ist keine gültige Auswahl.
+# converters
+javax.faces.converter.BigDecimalConverter.DECIMAL = {2}: ''{0}'' muss eine Dezimalzahl sein.
+javax.faces.converter.BigDecimalConverter.DECIMAL_detail = {2}: ''{0}'' muss eine Dezimalzahl aus keinem oder mehr Zeichen gefolgt von einem optionalen Punkt und den Nachkommastellen sein. Beispiel: {1} 
+ 
+javax.faces.converter.BigIntegerConverter.BIGINTEGER = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein. 
+javax.faces.converter.BigIntegerConverter.BIGINTEGER_detail = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein. Beispiel: {1}
+ 
+javax.faces.converter.BooleanConverter.BOOLEAN = {1}: ''{0}'' muss 'true' oder 'false' sein.
+javax.faces.converter.BooleanConverter.BOOLEAN_detail = {1}: ''{0}'' muss 'true' oder 'false' sein.  Jeder Wert au\u00DFer 'true' wird als 'false' interpretiert.
 
-javax.faces.component.UISelectMany.INVALID        = Validierungsfehler
-javax.faces.component.UISelectMany.INVALID_detail = "{0}": Wert ist keine gültige Auswahl.
+javax.faces.converter.ByteConverter.BYTE = {2}: ''{0}'' muss eine Zahl zwischen 0 und 255 sein.
+javax.faces.converter.ByteConverter.BYTE_detail = {2}: ''{0}'' muss eine Zahl zwischen 0 und 255 sein.  Beispiel: {1}
+ 
+javax.faces.converter.CharacterConverter.CHARACTER = {1}: ''{0}'' muss ein g\u00FCltiges Zeichen sein.
+javax.faces.converter.CharacterConverter.CHARACTER_detail = {1}: ''{0}'' muss ein g\u00FCltiges ASCII Zeichen sein.
 
-javax.faces.validator.NOT_IN_RANGE        = Validierungsfehler
-javax.faces.validator.NOT_IN_RANGE_detail = "{2}": Eingegebener Wert liegt nicht im erwarteten Bereich von {0} bis {1}.
+javax.faces.converter.DateTimeConverter.DATE = {2}: ''{0}'' konnte nicht als Datum erkannt werden.
+javax.faces.converter.DateTimeConverter.DATE_detail = {2}: ''{0}'' konnte nicht als Datum erkannt werden. Beispiel: {1} 
+javax.faces.converter.DateTimeConverter.TIME = {2}: ''{0}'' konnte nicht als Zeit erkannt werden.
+javax.faces.converter.DateTimeConverter.TIME_detail = {2}: ''{0}'' konnte nicht als Zeit erkannt werden. Beispiel: {1} 
+javax.faces.converter.DateTimeConverter.DATETIME = {2}: ''{0}'' konnte nicht als Datum und Zeit erkannt werden.
+javax.faces.converter.DateTimeConverter.DATETIME_detail = {2}: ''{0}'' konnte nicht als Datum und Zeit erkannt werden. Beispiel: {1} 
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE = {1}: Ein 'pattern' oder 'type' Attribut muss angegeben werden um den Wert ''{0}'' zu konvertieren.
 
-javax.faces.validator.DoubleRangeValidator.LIMIT        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
+javax.faces.converter.DoubleConverter.DOUBLE = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein.
+javax.faces.converter.DoubleConverter.DOUBLE_detail = {2}: ''{0}'' muss eine Zahl zwischen 4.9E-324 und 1.7976931348623157E308 sein. Beispiel: {1}
 
-javax.faces.validator.DoubleRangeValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": Wert ist größer als das erlaubte Maximum ''{0}''.
+javax.faces.converter.EnumConverter.ENUM = {2}: ''{0}'' muss in einen Enum konvertierbar sein.
+javax.faces.converter.EnumConverter.ENUM_detail = {2}: ''{0}'' muss in einen Enum konvertierbar sein, der die Konstante ''{1}'' enth\u00E4lt.
+javax.faces.converter.EnumConverter.ENUM_NO_CLASS = {1}: ''{0}'' muss in einen Enum konvertierbar sein, aber es wurde keine Enum Klasse bereitgestellt.
+javax.faces.converter.EnumConverter.ENUM_NO_CLASS_detail = {1}: ''{0}'' muss in einen Enum konvertierbar sein, aber es wurde keine Enum Klasse bereitgestellt.
 
-javax.faces.validator.DoubleRangeValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": Wert ist kleiner als das erlaubte Minimum ''{0}''.
+javax.faces.converter.FloatConverter.FLOAT = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein.
+javax.faces.converter.FloatConverter.FLOAT_detail = {2}: ''{0}'' muss eine Zahl zwischen 1.4E-45 und 3.4028235E38 sein. Beispiel: {1}
 
-javax.faces.validator.DoubleRangeValidator.TYPE        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": Eingegebener Wert hat falschen Datentyp.
+javax.faces.converter.IntegerConverter.INTEGER = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein.
+javax.faces.converter.IntegerConverter.INTEGER_detail = {2}: ''{0}'' muss eine Zahl zwischen -2147483648 und 2147483647 sein. Beispiel: {1}
 
-javax.faces.validator.LengthValidator.LIMIT        = Validierungsfehler
-javax.faces.validator.LengthValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
+javax.faces.converter.LongConverter.LONG = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein.
+javax.faces.converter.LongConverter.LONG_detail = {2}: ''{0}'' muss eine Zahl zwischen -9223372036854775808 und 9223372036854775807 sein. Beispiel: {1}
 
-javax.faces.validator.LengthValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": Eingegebener Wert ist länger als die maximal zulässige Anzahl von {0} Zeichen.
+javax.faces.converter.NumberConverter.CURRENCY = {2}: ''{0}'' konnte nicht als ein Geldbetrag erkannt werden.
+javax.faces.converter.NumberConverter.CURRENCY_detail = {2}: ''{0}'' konnte nicht als ein Geldbetrag erkannt werden. Beispiel: {1}
+javax.faces.converter.NumberConverter.PERCENT = {2}: ''{0}'' konnte nicht als ein Prozentanteil erkannt werden.
+javax.faces.converter.NumberConverter.PERCENT_detail = {2}: ''{0}'' konnte nicht als ein Prozentanteil erkannt werden. Beispiel: {1}
+javax.faces.converter.NumberConverter.NUMBER = {2}: ''{0}'' ist keine Zahl.
+javax.faces.converter.NumberConverter.NUMBER_detail = {2}: ''{0}'' ist keine Zahl. Beispiel: {1}
+javax.faces.converter.NumberConverter.PATTERN = {2}: ''{0}'' ist kein Zahlmuster.
+javax.faces.converter.NumberConverter.PATTERN_detail = {2}: ''{0}'' ist kein Zahlmuster. Beispiel: {1}
 
-javax.faces.validator.LengthValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": Eingegebener Wert ist kürzer als die minimal zulässige Anzahl von {0} Zeichen.
+javax.faces.converter.ShortConverter.SHORT = {2}: ''{0}'' muss eine Zahl aus ein oder mehr Ziffern sein.
+javax.faces.converter.ShortConverter.SHORT_detail = {2}: ''{0}'' muss eine Zahl zwischen -32768 und 32767 sein. Beispiel: {1}
 
-javax.faces.validator.LongRangeValidator.LIMIT        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
+javax.faces.converter.STRING = {1}: Konnte ''{0}'' nicht in eine Zeichenkette konvertieren.
 
-javax.faces.validator.LongRangeValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": Wert ist größer als das erlaubte Maximum ''{0}''.
+# validators
+javax.faces.validator.NOT_IN_RANGE = Validierungsfehler: Der Wert ist nicht zwischen den erwarteten Werten von {0} und {1}.  
 
-javax.faces.validator.LongRangeValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": Wert ist kleiner als das erlaubte Minimum ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM = {1}: Validierungsfehler: Der Wert ist gr\u00F6\u00DFer als das erlaubte Maximum von ''{0}''
+javax.faces.validator.DoubleRangeValidator.MINIMUM = {1}: Validierungsfehler: Der Wert ist kleiner als das erlaubte Minimum von ''{0}''
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE = {2}: Validierungsfehler: Der Wert ist nicht zwischen den erwarteten Werten von {0} und {1}
+javax.faces.validator.DoubleRangeValidator.TYPE = {0}: Validierungsfehler: Der Wert ist nicht vom korrekten Typ
 
-javax.faces.validator.LongRangeValidator.TYPE        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": Eingegebener Wert hat falschen Datentyp.
+javax.faces.validator.LengthValidator.MAXIMUM = {1}: Validierungsfehler: Der Wert ist gr\u00F6\u00DFer als das erlaubte Maximum von ''{0}''
+javax.faces.validator.LengthValidator.MINIMUM = {1}: Validierungsfehler: Der Wert ist kleiner als das erlaubte Minimum von ''{0}''
 
-
-# additional messages (not specified, but supported by myfaces API converters)
-
-javax.faces.convert.BigDecimalConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BigDecimalConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.BigIntegerConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BigIntegerConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.BooleanConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BooleanConverter.CONVERSION_detail = "{1}": {0} konnte nicht in einen boolschen Wert umgewandelt werden.
-
-javax.faces.convert.ByteConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.ByteConverter.CONVERSION_detail = "{1}": {0} konnte nicht in einen Byte-Wert umgewandelt werden.
-
-javax.faces.convert.CharacterConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.CharacterConverter.CONVERSION_detail = {0} konnte nicht in ein Zeichen umgewandelt werden.
-
-javax.faces.convert.DateTimeConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": {0} ist keine gültige Datum/Zeit-Angabe.
-
-javax.faces.convert.DoubleConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.FloatConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.IntegerConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.LongConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.NumberConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
-javax.faces.convert.ShortConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
-
+javax.faces.validator.LongRangeValidator.MAXIMUM = {1}: Validierungsfehler: Der Wert ist gr\u00F6\u00DFer als das erlaubte Maximum von ''{0}''
+javax.faces.validator.LongRangeValidator.MINIMUM = {1}: Validation Error: Der Wert ist kleiner als das erlaubte Minimum von ''{0}''
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE = {2}: Validierungsfehler: Der Wert ist nicht zwischen den erwarteten Werten von {0} und {1}.
+javax.faces.validator.LongRangeValidator.TYPE = {0}: Validierungsfehler: Der Wert ist nicht vom korrekten Typ.
 
 # myfaces specific messages
-
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validierungsfehler
 org.apache.myfaces.Email.INVALID_detail =Der eingegebene Wert ({0}) ist keine korrekte E-Mail-Adresse.
@@ -125,5 +115,11 @@ org.apache.myfaces.ticker.NOCONNECTION_detail = Sind Sie hinter einer Firewall?
 
 org.apache.myfaces.ISBN.INVALID = Validierungsfehler
 org.apache.myfaces.ISBN.INVALID_detail =Der eingegebene Wert ({0}) ist keine korrekte ISBN  Nummer.
+
+org.apache.myfaces.tree2.MISSING_NODE        = Fehlender Knoten
+org.apache.myfaces.tree2.MISSING_NODE_detail = Der Knoten "{0}" existiert nicht.
+
+org.apache.myfaces.calendar.CONVERSION = Konvertierungsfehler
+org.apache.myfaces.calendar.CONVERSION_detail = "{0}": Der eingegebene Wert "{1}" konnte nicht in ein Datum konvertiert werden.
 
 org.apache.myfaces.FileUpload.SIZE_LIMIT = "{0}": Die Größe der hochgeladenen Datei darf nicht größer als {1} Bytes sein.
